--- a/css/style.css
+++ b/css/style.css
@@ -211,18 +211,78 @@ li {
     text-align: center;
 }
 
-.add a {
+/* botões flutuantes */
+
+.btns_flutuantes a {
     height: 56px;
     width: 56px;
-
     padding: 16px;
     position: fixed;
-    bottom: 70px;
-    right: 10px;
     background: #4894FF;
     color: #fff;
     border-radius: 50%;
+    box-shadow: 0px 4px 4px #A3A3A3;
 
-    box-shadow: 0px 4px 4px #A3A3A3
 }
+
+.add a {
+    bottom: 70px;
+    right: 12px;
+}
+/* botões ocultos */
+.botoes_ocultos {
+    width: 100%;
+    height: 100vh;
+
+    background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    opacity: 0;
+    pointer-events: none;
+
+    transition: opacity 1s;
+}
+
+.desocultar {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.agenda-consulta_virtual a {
+    bottom: 138px;
+    right: 12px;
+    
+
+}
+
+.agenda-consulta_endereco a {
+    bottom: 206px;
+    right: 12px;
+    
+}
+
+.infor-btn-flutuante {
+    background: #fff;
+    border-radius: 8px;
+    padding: 2px 8px;
+
+    color: #464646;
+    font-size: 12px;
+    font-weight: 500;
+
+    position: fixed;
+}
+
+.infor-btn-video {
+    bottom: 156px;
+    right: 84px;
+}
+
+.infor-btn-local {
+    bottom:224px;
+    right: 84px;
+}
+
 /* ################### */
