--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,12 @@
     text-decoration: none;
 }
 body{
-    font-size: 100%;
     list-style-type: none;
     font-family: 'Montserrat', sans-serif;
     background: #E5E5E5;
+}
+html{
+    font-size: 62.5%;
 }
 /* --------- */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
@@ -20,7 +22,7 @@ body{
 */
 
 main {
-    padding: 16px;
+    padding: 1.6rem;
     margin-bottom: 40px;
 }
 
@@ -49,13 +51,13 @@ main {
 
 .titulo-principal {
     padding: 4px 0;
-    font-size: 22px;
+    font-size: 2.2rem;
     font-weight: 700;
     color: #464646;
 }
 
 .titulo-secundario {
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 400;
     color: #A3A3A3;
 }
@@ -63,7 +65,7 @@ main {
 .consultas_data {
     padding: 8px 0;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 1.6rem;
     color: #464646;
 }
 
@@ -72,6 +74,16 @@ li {
     background: #fff;
     border-radius: 8px;
     margin-bottom: 16px;
+}
+
+/* .consultas {
+    display: grid;
+} */
+
+
+.consultas ul {
+    max-width: 32.8rem;
+    margin: auto;
 }
 
 /* primeira parte card */
@@ -103,20 +115,20 @@ li {
 
 .titulo_paciente {
     font-weight: 700;
-    font-size: 14px;
+    font-size: 1.4rem;
     color: #464646;
 }
 
 .subtitulo_paciente {
     font-weight: 400;
-    font-size: 12px;
+    font-size: 1.2rem;
     color: #A3A3A3;
     display: flex;
     align-items: center;
 }
 
 .icone {
-    font-size: 16px;    
+    font-size: 1.6rem;    
     color: #A3A3A3;
     padding-right: 8px;
 }
@@ -127,7 +139,7 @@ li {
 
 .conulta_card-conteudo p {
     font-weight: 500;
-    font-size: 12px;
+    font-size: 1.2rem;
     color: #464646;
 
     padding-bottom: 8px;
@@ -167,7 +179,7 @@ li {
 }
 
 .consulta_card-chat span {
-    font-size: 16px;
+    font-size: 1.6rem;
     color: #4894FF;
 }
 
@@ -197,7 +209,7 @@ li {
 }
 
 .menu a {
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: 400;
     color: #464646;
 }
@@ -269,7 +281,7 @@ li {
     padding: 2px 8px;
 
     color: #464646;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-weight: 500;
 
     position: fixed;
@@ -286,3 +298,25 @@ li {
 }
 
 /* ################### */
+/* media queries */
+@media (min-width: 768px) {
+    .consultas {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .consultas ul {
+        margin: 0;
+    }
+}
+
+@media (min-width: 1440px) {
+    .consultas {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .menu ul {
+        justify-content: space-evenly;
+    }
+}
